# appinspect-submit

./: .gitignore  CHANGELOG  LICENSE  README.md  SECURITY.MD  buildpackages.sh  pyproject.toml  requirements.txt  setup.py  test_report.json
.github/: CONTRIBUTING.md  dependabot.yml
appinspect_submit/: __init__.py  __main__.py  config.py  constants.py
tests/: __init__.py  test_click.py  test_login.py
