[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "appinspect-submit"
version = "0.1.2"
description = "Submits your app to Splunk AppInspect."
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",
    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    # Pick your license as you wish (should match "license" above)
    "License :: OSI Approved :: MIT License",
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

keywords = ["splunk", "api", "appinspect", "cli"]


documentation = "https://github.com/terminaloutcomes/appinspect-submit/blob/main/README.md"
repository = "https://github.com/terminaloutcomes/appinspect-submit"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
requests = "^2.27.1"
loguru = ">=0.5.3,<0.8.0"
pydantic-settings = "^2.1.0"

[tool.poetry.dev-dependencies]
mypy = "^1.8"
pylint = "^3.0.3"
pytest = "^7.4.4"
types-requests = "^2.31.0"
black = "^23.12"


[tool.poetry.scripts]
appinspect-submit = 'appinspect_submit.__main__:cli'
