[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "appinspect-submit"
version = "0.1.3"
description = "Submits your app to Splunk AppInspect."
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

keywords = ["splunk", "api", "appinspect", "cli"]


documentation = "https://github.com/terminaloutcomes/appinspect-submit/blob/main/README.md"
repository = "https://github.com/terminaloutcomes/appinspect-submit"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
requests = "^2.27.1"
loguru = ">=0.5.3,<0.8.0"
pydantic-settings = "^2.1.0"

[tool.poetry.scripts]
appinspect-submit = 'appinspect_submit.__main__:cli'

[tool.poetry.group.dev.dependencies]
mypy = "^1.8"
pylint = "^3.0.3"
pytest = "^8.0.0"
types-requests = "^2.31.0"
ruff = "^0.2.2"

[tool.pytest.ini_options]
markers = ["network: uses live network calls (deselect with '-m \"not slow\"')"]
