[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = ["network: uses live network calls (deselect with '-m \"not network\"')"]

[project]
authors = [
    {name = "James Hodgkinson", email = "james@terminaloutcomes.com"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.2",
    "loguru>=0.7.3",
    "pydantic-settings>=2.13.1",
    "requests>=2.33.1",
]
name = "appinspect-submit"
version = "0.1.4"
description = "Submits your app to Splunk AppInspect."
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = [
    "splunk",
    "api",
    "appinspect",
    "cli",
]

[project.urls]
repository = "https://github.com/terminaloutcomes/appinspect-submit"
documentation = "https://github.com/terminaloutcomes/appinspect-submit/blob/main/README.md"

[project.scripts]
appinspect-submit = "appinspect_submit.__main__:cli"

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "ty>=0.0.31",
    "types-requests>=2.33.0.20260408",
]
